WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44984
Web archives are created with a size of 0 due to PassRefPtr mistake
https://bugs.webkit.org/show_bug.cgi?id=44984
Summary
Web archives are created with a size of 0 due to PassRefPtr mistake
Darin Adler
Reported
2010-08-31 14:04:57 PDT
Web archives are created with a size of 0 due to PassRefPtr mistake
Attachments
Patch
(8.05 KB, patch)
2010-08-31 14:08 PDT
,
Darin Adler
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2010-08-31 14:08:50 PDT
Created
attachment 66101
[details]
Patch
Darin Adler
Comment 2
2010-08-31 14:39:46 PDT
Comment on
attachment 66101
[details]
Patch Clearing flags on attachment: 66101 Committed
r66539
: <
http://trac.webkit.org/changeset/66539
>
Darin Adler
Comment 3
2010-08-31 14:39:51 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug